--- a/web/AdminLTE/empty.html
+++ b/web/AdminLTE/empty.html
@@ -409,7 +409,7 @@
 
 
         <!-- jQuery 2.0.2 -->
-        <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
+        <script src="http://libs.baidu.com/jquery/2.0.0/jquery.js"></script>
         <!-- Bootstrap -->
         <script src="js/plugins/bootstrap.min.js" type="text/javascript"></script>
         <!-- AdminLTE App -->
